--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -22,14 +22,14 @@ jobs:
       with:
         node-version: 13.x
     
-    - name: Install NPM packages
-      run: npm ci
+    - name: Install packages (with yarn)
+      run: yarn install --frozen-lockfile
     
     - name: Build project
-      run: npm run build
+      run: yarn build
     
-    - name: Run tests
-      run: npm run test
+    # - name: Run tests
+    #   run: npm run test
 
     - name: Upload production-ready build files
       uses: actions/upload-artifact@v2
