fix: deploy automation test 2

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,11 +33,10 @@ jobs:
       
       - name: Registry github user
           run: |
-            git config --global user.email <email>
-            git config --global user.name <name>
+            git config --global user.email compresdavid@gmail.com 
+            git config --global user.name daliife
 
       - name: Deploy the app
         run: yarn deploy
         env: 
           GH_TOKEN: ${{ secrets.GH_TOKEN}}
-
