--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-first-steps",
-  "homepage": "https://daliife.github.io/react-first-steps",
+  "homepage": "http://daliife.github.io/react-first-steps/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
