--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-first-steps",
-  "homepage": "http://daliife.github.io/react-first-steps/",
+  "homepage": "/react-first-steps/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "gh-pages": "^3.2.3",
+    "history": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
