--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
+    "prettier": "prettier --write \"**/*.+(js|jsx|json|css|md)\""
   },
   "eslintConfig": {
     "extends": [
@@ -45,7 +48,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.8",
+    "eslint": "^7.32.0",
     "postcss": "^7.0.39",
+    "prettier": "^2.5.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16"
   }
 }
