fix: update pipe yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,10 @@
-name: Github Pages Deploy
+name: Automatic deploy to Github Pages
 
 on:
   push:
     branches:
-      - "main"
-      - "develop"
+      - 'main'
+      - 'develop'
 
 jobs:
   build:
@@ -12,17 +12,26 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [15.x]
-    
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v1
+        node-version: [12.x, 15.x]
 
-      - name: Install and build
-        run: npm install && npm run build
-      
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@4.1.1
+    steps:
+
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version}}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version}}
+
+      - name: Install node packages
+        run: npm install
+
+      - name: Build page
+        run: npm run build
+
+      - name: Deploy to gh-pages
+        uses: peaceiris/actions-gh-pages@v3
+        # uses: JamesIves/github-pages-deploy-action@4.1.1
+
         with:
-          branch: gh-pages # The branch the action should deploy to.
-          folder: build # The folder the action should deploy.                
+          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          publish_dir: ./build
