--- a/.eslintrc
+++ b/.eslintrc
@@ -6,9 +6,14 @@
   },
   "extends": "eslint:recommended",
   "parserOptions": {
-    "ecmaVersion": 2020
+    "ecmaVersion": 2020,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
   },
   "rules": {
-    "no-console": "error"
+    "no-console": "error",
+    "no-unused-vars": "off"
   }
 }
