--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,7 @@
     "node": true,
     "browser": true
   },
-  "extends": "eslint:recommended",
+  "extends": ["react-app", "react-app/jest", "plugin:prettier/recommended"],
   "parserOptions": {
     "ecmaVersion": 2020,
     "sourceType": "module",
