--- a/package.json
+++ b/package.json
@@ -49,8 +49,16 @@
   "devDependencies": {
     "autoprefixer": "^9.8.8",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
     "postcss": "^7.0.39",
     "prettier": "^2.5.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint && npm run format"
+    }
   }
 }
